# demod-bt

./: .gitignore  README.md  ROADMAP.md  flake.nix  justfile
haskell/: LICENSE  demod-bt.cabal
haskell/app/: Main.hs
haskell/src/DeMoD/: BT.hs
haskell/src/DeMoD/BT/: AVDTP.hs  AVRCP.hs  BlueZ.hs  DCF.hs  FFI.hs  Types.hs
nixos/: module.nix
rust/: Cargo.toml  build.rs
rust/src/: audio.rs  avrcp.rs  bluez.rs  codec.rs  compat.rs  dcf.rs  engine.rs  ffi.h  ffi.rs  lc3_ffi.rs  lib.rs  runtime.rs  sbc_ffi.rs  transport.rs
